user comment card added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                 <p>
                     আমাদের সুবিধা গ্রহণকারীদের মন্তব্য
                 </p>
+                <br><br>
                 <div class="comments">
+                    <!-- comment one -->
                     <div class="comment">
                         <div class="img-one">
                             <img class="bg-image" src="./assets/images/left-bg-shape.svg" alt="">
@@ -135,23 +137,75 @@
                         <div class="comment-details">
                             <img class="img-two" src="./assets/images/cote.webp" alt="">
                             <div class="user-comment">
-                                <div class="user-img">
-                                    <img src="" alt="">
-                                    <h2 class="user-name">
-                                        Abul Kasem
-                                    </h2>
-                                    <p style="text-align: left;" class="user-info">সফটল্যাব আইটি</p>
+                                <div class="user-data">
+                                    <img src="./assets/images/user/user.1.jfif" alt="">
+                                    <div class="user-information">
+                                        <h2 class="user-name">
+                                            Abullah Al Nomaan
+                                        </h2>
+                                        <p class="user-info">Softlab IT,   Jr. Web Developer (Frontend)</p>
+                                    </div>
                                 </div>
-                                <div>
-                                    <p style="text-align: left;" class="user-comment">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum autem
-                                        molestias alias eligendi impedit eveniet fugiat, temporibus amet? Voluptate,
-                                        numquam?
-                                    </p>
-                                </div>
+                                <p class="user-text" style="text-align: left;">
+                                    ১০ মিনিটস স্কুল থেকে মাইক্রোসফ্ট এক্সেল এর কোর্সটি করে আমি যথেষ্ট উপকৃত হয়েছি।আমি
+                                    উক্ত কোর্স থেকে যা শিখেছি তা আমার কর্মক্ষেত্রে প্রতিনিয়ত কাজে লাগছে। ১০ মিনিটস স্কুল
+                                    ভবিষ্যতে আরো নতুন নতুন যুগোপযগী কোর্স চালু করবে এই প্রত্যাশা করি। ধন্যবাদ ১০
+                                    মিনিটস...
+                                </p>
                             </div>
                         </div>
                     </div>
+                    <!-- comment two -->
+                    <div class="comment">
+                        <div class="img-one">
+                            <img class="bg-image" src="./assets/images/left-bg-shape.svg" alt="">
+                        </div>
+                        <div class="comment-details">
+                            <img class="img-two" src="./assets/images/cote.webp" alt="">
+                            <div class="user-comment">
+                                <div class="user-data">
+                                    <img src="./assets/images/user/user2.jpg" alt="">
+                                    <div class="user-information">
+                                        <h2 class="user-name">
+                                            Mahir Shariar 
+                                        </h2>
+                                        <p class="user-info">Graphics Designer</p>
+                                    </div>
+                                </div>
+                                <p class="user-text" style="text-align: left;">
+                                      বিবিএ এর একজন ছাত্র হিসেবে প্রেজেন্টেশন বাধ্যতামূলক বিষয় এবং এর সাথে জড়িত মাইক্রোসফট পাওয়ারপয়েন্ট স্লাইড।এটি আমার জন্য একটি চ্যালেঞ্জিং বিষয় ছিল যা সহজ করতে সাহায্য করেছে টেন মিনিট স্কুলের পাওয়ারপয়েন্ট কোর্স। এই কোর্স শেষ করার মাধ্যমে আমি একটা সু..
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- comment three -->
+                    <div class="comment">
+                        <div class="img-one">
+                            <img class="bg-image" src="./assets/images/left-bg-shape.svg" alt="">
+                        </div>
+                        <div class="comment-details">
+                            <img class="img-two" src="./assets/images/cote.webp" alt="">
+                            <div class="user-comment">
+                                <div class="user-data">
+                                    <img src="./assets/images/user/user3.jpg" alt="">
+                                    <div class="user-information">
+                                        <h2 class="user-name">
+                                            Shamim Hossain
+                                        </h2>
+                                        <p class="user-info">Softlab IT, Sr. Web Developer (Frontend)</p>
+                                    </div>
+                                </div>
+                                <p class="user-text" style="text-align: left;">
+                                    ১০ মিনিটস স্কুল থেকে মাইক্রোসফ্ট এক্সেল এর কোর্সটি করে আমি যথেষ্ট উপকৃত হয়েছি।আমি
+                                    উক্ত কোর্স থেকে যা শিখেছি তা আমার কর্মক্ষেত্রে প্রতিনিয়ত কাজে লাগছে। ১০ মিনিটস স্কুল
+                                    ভবিষ্যতে আরো নতুন নতুন যুগোপযগী কোর্স চালু করবে এই প্রত্যাশা করি। ধন্যবাদ ১০
+                                    মিনিটস...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
             </div>
         </section>
