user card responsive

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                         <h2 class="user-name">
                                             Abullah Al Nomaan
                                         </h2>
-                                        <p class="user-info">Softlab IT,   Jr. Web Developer (Frontend)</p>
+                                        <p class="user-info">Softlab IT,   Jr. Web Developer</p>
                                     </div>
                                 </div>
                                 <p class="user-text" style="text-align: left;">
@@ -173,7 +173,7 @@
                                     </div>
                                 </div>
                                 <p class="user-text" style="text-align: left;">
-                                      বিবিএ এর একজন ছাত্র হিসেবে প্রেজেন্টেশন বাধ্যতামূলক বিষয় এবং এর সাথে জড়িত মাইক্রোসফট পাওয়ারপয়েন্ট স্লাইড।এটি আমার জন্য একটি চ্যালেঞ্জিং বিষয় ছিল যা সহজ করতে সাহায্য করেছে টেন মিনিট স্কুলের পাওয়ারপয়েন্ট কোর্স। এই কোর্স শেষ করার মাধ্যমে আমি একটা সু..
+                                    ১০ মিনিটস স্কুল থেকে মাইক্রোসফ্ট এক্সেল এর কোর্সটি করে আমি যথেষ্ট উপকৃত হয়েছি।আমি উক্ত কোর্স থেকে যা শিখেছি তা আমার কর্মক্ষেত্রে প্রতিনিয়ত কাজে লাগছে। ১০ মিনিটস স্কুল ভবিষ্যতে আরো নতুন নতুন যুগোপযগী কোর্স চালু করবে এই প্রত্যাশা করি। ধন্যবাদ ১০ মিনিটস...
                                 </p>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                         <h2 class="user-name">
                                             Shamim Hossain
                                         </h2>
-                                        <p class="user-info">Softlab IT, Sr. Web Developer (Frontend)</p>
+                                        <p class="user-info">Softlab IT, Sr. Web Developer</p>
                                     </div>
                                 </div>
                                 <p class="user-text" style="text-align: left;">
