solved some provlem

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                         <h2 class="user-name">
                                             Abullah Al Nomaan
                                         </h2>
-                                        <p class="user-info">Softlab IT,   Jr. Web Developer</p>
+                                        <p class="user-info">Softlab IT,   Jr. Web Developer...</p>
                                     </div>
                                 </div>
                                 <p class="user-text" style="text-align: left;">
@@ -192,7 +192,7 @@
                                         <h2 class="user-name">
                                             Shamim Hossain
                                         </h2>
-                                        <p class="user-info">Softlab IT, Sr. Web Developer</p>
+                                        <p class="user-info">Softlab IT, Sr. Web Developer...</p>
                                     </div>
                                 </div>
                                 <p class="user-text" style="text-align: left;">
