--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 
             </div>
         </section>
-        <!-- সুবিধা ডিজাইন শেষ -->
+        <!-- সুবিধা সেকশন ডিজাইন শেষ -->
 
 
-        <!-- মন্তব্য শুরু -->
+        <!-- মন্তব্য সেকশন ডিজাইন শুরু -->
         <section class="section-two global-section">
             <div class="section-two-child global-section-child">
                 <h1 class="title">মন্তব্য</h1>
@@ -209,7 +209,65 @@
                 </div>
             </div>
         </section>
-        <!-- মন্তব্য শেষ -->
+        <!-- মন্তব্য সেকশন ডিজাইন শেষ -->
+
+
+        <!-- অর্জন সেকশন ডিজাইন শুরু -->
+        <section class="section-three global-section">
+            <div class="section-three-child global-section-child">
+                <h1 class="title">আমাদের অর্জন</h1>
+                <div class="achivements">
+                    <div class="achivement-img">
+                        <img src="./assets/images/career.webp" alt="">
+                    </div>
+                    <div class="achivement-detial">
+
+                        <!-- achivement one -->
+                        <div class="achive-data">
+                            <div class="achive-data-img">
+                                <img src="./assets/images/teacher.webp" alt="">
+                            </div>
+                            <div class="achive-data-details">
+                                <h1>৪৫০+</h1>
+                                <h3>শিক্ষক</h3>
+                            </div>
+                        </div>
+                        <!-- achivement one -->
+                        <div class="achive-data">
+                            <div class="achive-data-img">
+                                <img src="./assets/images/content.webp" alt="">
+                            </div>
+                            <div class="achive-data-details">
+                                <h1>১৮ হাজার+</h1>
+                                <h3>ভিডিও</h3>
+                            </div>
+                        </div>
+                        <!-- achivement one -->
+                        <div class="achive-data">
+                            <div class="achive-data-img">
+                                <img src="./assets/images/student.webp" alt="">
+                            </div>
+                            <div class="achive-data-details">
+                                <h1>৯৩ লক্ষ+</h1>
+                                <h3>শিক্ষার্থী</h3>
+                            </div>
+                        </div>
+                        <!-- achivement one -->
+                        <div class="achive-data">
+                            <div class="achive-data-img">
+                                <img src="./assets/images/teacher.webp" alt="">
+                            </div>
+                            <div class="achive-data-details">
+                                <h1>৩২ লক্ষ+</h1>
+                                <h3>অ্যাপ ব্যবহারকারী</h3>
+                            </div>
+                        </div>
+                       
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- অর্জন সেকশন ডিজাইন শেষ -->
 
     </main>
     <!-- our design end -->
