complete this project

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         </div>
                         <div class="courses-details">
                             <h3 class="courses-name">
-                                English Grammar Crash Course 
+                                English Grammar Course 
                             </h3>
                             <div class="buy-courses">
                                 <p class="courses-price">
