solved logo width problem

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- title start -->
     <h1 class="logo">
-        <img width="10%" src="https://cdn.10minuteschool.com/images/svg/10mslogo-svg.svg" alt="">
+        <img src="https://cdn.10minuteschool.com/images/svg/10mslogo-svg.svg" alt="">
     </h1>
     <!-- title end -->
 
